added redirect if user is not logged in

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -75,12 +75,13 @@
         </ul>
         <br>
         <div class="btn-group" role="group" aria-label="Basic example">
-          <span>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the
-                list</button>
-            </div>
-          </span>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the
+              list</button>
+          </div>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button (click)="startReservation()" class="btn btn-warning my-2 my-sm-0">Make a Reservation</button>
+          </div>
         </div>
       </div>
 
