--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -61,9 +61,9 @@
             <tr>
               <th>Id</th>
               <th>Gear</th>
-              <th>Owner</th>
-              <th></th>
-              <th></th>
+              <th>Owner Id</th>
+              <th>First Name</th>
+              <th>Last Name</th>
               <th>Available</th>
               <th>Active</th>
             </tr>
