--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -53,8 +53,7 @@
             <img *ngIf="selected.imageUrl3 && selected.imageUrl3.length > 0" src="{{selected.imageUrl3}}"
               alt="gear image" class="gear-img-details">
           </li>
-          <li class="list-group-item"
-            *ngIf="this.selected && this.selected.description && this.selected.description.length > 0">
+          <li class="list-group-item" *ngIf="this.selected && this.selected.description">
             Description:
             {{selected.description | lowercase }}</li>
           <li class="list-group-item ">Price per day: {{selected.price | currency }}</li>
@@ -65,10 +64,6 @@
 
           <li class="list-group-item ">Rent From: {{selected.user.firstName | titlecase }}
             {{selected.user.lastName | titlecase }}</li>
-          <!-- <li class="list-group-item ">Address: {{selected.user.address.address | titlecase }} </li>
-          <li class="list-group-item "
-            *ngIf="selected && selected.user.address.address2 && selected.user.address.address2.length > 0">Address:
-            {{selected.user.address.address2 | titlecase }} </li> -->
           <li class="list-group-item ">Location: {{selected.user.address.city | titlecase }},
             {{selected.user.address.state | titlecase }} {{selected.user.address.postalCode}}</li>
 
@@ -76,8 +71,7 @@
         <br>
         <div class="btn-group" role="group" aria-label="Basic example">
           <div class="btn-group" role="group" aria-label="Basic example">
-            <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the
-              list</button>
+            <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the list</button>
           </div>
           <div class="btn-group" role="group" aria-label="Basic example">
             <button (click)="startReservation()" class="btn btn-warning my-2 my-sm-0">Make a Reservation</button>
