updated reservations get all and post routes

--- a/ngGearSilo/src/app/components/reservation/reservation.component.html
+++ b/ngGearSilo/src/app/components/reservation/reservation.component.html
@@ -49,18 +49,16 @@
           <label>End date: </label>
           <input class="form-control mr-sm-2" type="date" placeholder="Search" aria-label="Search" name="date">
           <br>
-        </form>
-        <div class="btn-group" role="group" aria-label="Basic example">
           <span>
             <div class="btn-group" role="group" aria-label="Basic example">
-              <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Submit reservation</button>
+              <button (click)="makeReservation()" class="btn btn-dark my-2 my-sm-0">Submit reservation</button>
             </div>
           </span>
-        </div>
+        </form>
       </div>
-
-      <div class="col-4"></div>
     </div>
+
+    <div class="col-4"></div>
   </div>
-  <br>
 </div>
+<br>
