added cancel button and changed routing when submited

--- a/ngGearSilo/src/app/components/reservation/reservation.component.html
+++ b/ngGearSilo/src/app/components/reservation/reservation.component.html
@@ -54,6 +54,7 @@
           <span>
             <div class="btn-group" role="group" aria-label="Basic example">
               <button (click)="createReservation()" class="btn btn-dark my-2 my-sm-0">Submit reservation</button>
+              <button (click)="toGears()" class="btn btn-warning my-2 my-sm-0">Cancel</button>
             </div>
           </span>
         </form>
