--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -32,8 +32,8 @@
           </div>
           <div class="col-md-12 user-detail-section2">
             <div class="border"></div>
-            <p></p>
-            <span>56 <small>and 42 review</small></span>
+            <p>Rating</p>
+            <span>{{myReservations}} <small>and 42 review</small></span>
           </div>
         </div>
       </div>
@@ -52,17 +52,8 @@
 
 
 
-          <!-- <div *ngFor="let row of rows; let i = index">
-            <button type="button" (click)="isCollapsed[i] = !isCollapsed[i]">
-              Button Text
-            </button>
-            <div [ngbCollapse]="isCollapsed[i]">
-              .. some content ..
-            </div>
-          </div> -->
 
-
-
+<!-- TABLE OF USER'S GEAR -->
           <div class="contaner-fluid">
             <div class="row">
               <div class="col-1"></div>
@@ -73,17 +64,6 @@
                   </div>
                   <table class="table table  table table-hover">
                     <thead class="thead-dark">
-                      <!-- <tr>
-
-                        <th scope="col">Name</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Update</th>
-                        <th></th>
-                        <th scope="col">Delete</th>
-                        <th></th>
-
-                      </tr> -->
                     </thead>
                     <tbody>
                       <tr *ngFor="let item of gearList; let i = index">
@@ -136,6 +116,14 @@
 </div>
 
 
+<ul *ngFor="let res of myReservations; let i = index">
+
+    <li>{{res.approved}}</li>
+    <li>{{res.gearReview}}</li>
+    <li>{{res | json}}</li>
+
+  </ul>
+
 <div>
 
   <!-- EDIT USER PROFILE MODAL-->
@@ -170,36 +158,7 @@
 
 
 
-  <!-- <section *ngFor="let item of gearList">
-    <div class="container-fluid">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card text-center">
-              <div class="title">
-                <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                <h2>Basic</h2>
-              </div>
-              <div class="price">
-                <h4><sup>$</sup>25</h4>
-              </div>
-              <div class="option">
-                <ul>
-                <li> <i class="fa fa-check" aria-hidden="true"></i> 10 GB Space </li>
-                <li> <i class="fa fa-check" aria-hidden="true"></i> 3 Domain Names </li>
-                <li> <i class="fa fa-check" aria-hidden="true"></i> 20 Email Address </li>
-                <li> <i class="fa fa-times" aria-hidden="true"></i> Live Support </li>
-                </ul>
-              </div>
-              <a href="#">Order Now </a>
-            </div>
-          </div> -->
 
-
-  <!-- </div>
-      </div>
-    </div>
-  </section> -->
 
 
 
@@ -301,3 +260,4 @@
     </div>
   </div>
 </div>
+
